# Agent-Lobbi

./: .gitignore  COMPLETION_SUMMARY.md  Dockerfile  PRODUCTION_READY_SUMMARY.md  PROTOCOL.md  Procfile  QUICK_RAILWAY_DEPLOY.md  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  agent_lobby.db  alembic.ini  deploy-to-railway.bat  deploy-to-railway.sh  greeter_agent.py  integrated_agent_lobby_demo.py  multi_agent_collaboration_demo.py  quick_agent_test.py  quick_collaboration_demo.py  railway-env.md  railway.json  railway.toml  real_world_coordinator_agent.py  real_world_data_agent.py  real_world_gemini_agent.py  real_world_gpt_agent.py  requirements.txt  setup.py  simulation.py  simulation_discovery.py  simulation_greeter.py  simulation_item_search.py  simulation_knowledge_sharing.py  start_real_collaborative_agents.py  test_collaboration.py  test_databus_traffic_orchestration.py  test_gemini_agent.py  test_mvp.py  test_production_system.py  test_real_agents_specifically.py  time_oracle_agent.py  (+1 more)
.github/workflows/: ci.yml
agent_lobbi/: __init__.py  cli.py  client.py  sdk.py  utils.py
agent_lobbi/metrics/: __init__.py
agent_lobbi/recovery/: __init__.py  connection_recovery.py
agent_lobbi/security/: __init__.py  consensus_system.py  data_protection_layer.py
agent_lobbi/tracking/: __init__.py  agent_tracking_system.py
config/: config.yaml  database.json
deploy/: railway_deploy.sh  railway_quick_deploy.md
examples/: simple_agent_example.py  workflow_demo_agent.py
migrations/: README.md  env.py
migrations/versions/: 241034265124_initial_migration.py
src/: __init__.py  __main__.py  agent_lobby_naa.db  encryption.key  main.py  main_with_a2a_bridge.py  mcp_filesystem_server.py  railway_main.py  requirements.txt
src/agent_lobbi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/api/: enhanced_a2a_api_bridge.py  lobby_api_bridge.py  metrics_api.py
src/core/: __init__.py  agent.py  agent_learning.py  agent_metrics_enhanced.py  agent_metrics_tracker.py  analytics.py  capability_matcher.py  collaboration_engine.py  config.py  data_bus_orchestrator.py  database.py  database_setup.py  enhanced_lobby_integration.py  fast_databus.py  fast_message_delivery.py  flexible_data_processor.py  interaction_tracker.py  learning.py  load_balancer.py  lobby.py  lobby_api_fix.py  message.py  monitoring.py  naa_performance_optimized.py  neuromorphic_agent_architecture.py  postgresql_audit.py  redis_database.py  security.py  security_validator.py  world_state.py
src/mcp/: __init__.py  mcp_agent_manager.py  mcp_server_factory.py  mcp_tools.py
src/persistence/: advanced_context_manager.py  state_context_manager.py
src/recovery/: connection_recovery.py
src/sdk/: __init__.py  advanced_agent_lobbi_sdk.py  agent_lobbi_sdk.py  ecosystem_sdk.py  enhanced_ecosystem_sdk.py  monitoring_sdk.py  website_integrated_sdk.py
src/sdk/go_sdk/: README.md  ecosystem_sdk.go
src/sdk/js_sdk/: README.md  enhanced_ecosystem_sdk.js  index.js  package.json
src/sdk/python_sdk/: .pypirc_template  CHANGELOG.md  LICENSE  PUBLISH_GUIDE.md  README.md  ROBUSTNESS_ASSESSMENT.md  publish.py  pyproject.toml
src/sdk/python_sdk/examples/: basic_agent.py  task_delegation.py
src/sdk/python_sdk/python_sdk/: __init__.py  cli.py  client.py
src/sdk/python_sdk/tests/: __init__.py  test_client.py
src/security/: consensus_system.py  data_protection_layer.py  game_theory_security.py  security_hardening.py  task_encryption.py
src/test_agents/: financial_agent.py  item_finder_agent.py  price_hunter_agent.py  simple_greeter_agent.py  writer_agent.py
src/tracking/: agent_tracking_system.py
tests/: debug_message.py  mock_lobby_server.py  simple_mock_lobby.py  simple_ws_test.py  test_sdk_agent.py
