[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent_lobby_sdk"
version = "0.1.0"
authors = [
    { name="AI Assistant", email="assistant@example.com" },
]
description = "Python SDK for interacting with the Agent Lobby ecosystem."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Assuming MIT, can be changed
    "Operating System :: OS Independent",
]
dependencies = [
    "websockets>=11.0.0",
    "PyYAML>=6.0.0",
    "aiohttp>=3.8.4", # For potential future HTTP interactions or if lobby uses it
]

[project.urls]
"Homepage" = "https://github.com/yourusername/agent_lobby" # Replace with actual URL
"Bug Tracker" = "https://github.com/yourusername/agent_lobby/issues" # Replace 